// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilteredResultsTitle Should match snapshot: has results 1`] = `
<div>
  <h4
    class="filtered-results__title"
  >
    <span>
      
      10 results found with 
      <strong>
        0 filters
      </strong>
       applied.
    
    </span>
     
    <!---->
  </h4>
</div>
`;

exports[`FilteredResultsTitle Should match snapshot: has results with 1 filter 1`] = `
<div>
  <h4
    class="filtered-results__title"
  >
    <span>
      
      10 results found with 
      <strong>
        1 filter
      </strong>
       applied.
    
    </span>
     
    <span
      class="filtered-results__title-notice text-italic text-bold"
    >
      Some secondary text
    </span>
  </h4>
</div>
`;

exports[`FilteredResultsTitle Should match snapshot: no results 1`] = `
<div>
  <h4
    class="filtered-results__title"
  >
    <span>
      
      0 results found with 
      <strong>
        0 filters
      </strong>
       applied.
    
    </span>
     
    <!---->
  </h4>
</div>
`;
